[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/arrow.png" type="Texture" id=1]
[ext_resource path="res://audios/Shot1.mp3" type="AudioStream" id=2]
[ext_resource path="res://arrow.gd" type="Script" id=3]
[ext_resource path="res://audios/Bam/Bam.mp3" type="AudioStream" id=4]
[ext_resource path="res://audios/Shot3.mp3" type="AudioStream" id=5]
[ext_resource path="res://audios/Shot4.mp3" type="AudioStream" id=6]
[ext_resource path="res://audios/Shot2.mp3" type="AudioStream" id=7]

[sub_resource type="PhysicsMaterial" id=2]
absorbent = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 34 )

[node name="arrow" type="RigidBody2D"]
rotation = -1.5708
collision_layer = 2
physics_material_override = SubResource( 2 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -10.487

[node name="shoot2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.487

[node name="shoot3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.487

[node name="shoot4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.487

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.244

[node name="impact" type="CollisionShape2D" parent="."]
position = Vector2( 10, 6.51598e-05 )
rotation = -1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="exit_screen" type="VisibilityNotifier2D" parent="."]
position = Vector2( 38, 1 )
scale = Vector2( 1, 0.75 )
rect = Rect2( -10, -10, 16, 17 )

[connection signal="body_entered" from="." to="." method="_on_arrow_body_entered"]
[connection signal="screen_exited" from="exit_screen" to="." method="_on_exit_screen_screen_exited"]
